--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" data-ng-app="myApp">
   <head>
-    <title>AngularJS Form</title>
+    <title>Data Subject Request</title>
     <script type="text/javascript" src="http://code.angularjs.org/1.2.25/angular.min.js"></script>
     <script type="text/javascript" src="js/modules/promise-tracker.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
@@ -9,47 +9,43 @@
   </head>
   <body class="container">
   
-  <h2>AngularJs form</h2>
+  <h2>Data Subject Request</h2>
 
-  <p>This is an AngularJs based form. It uses a controller to handle form validation and submission.</p>
-  <p>Find a step by step tutorial on this form at <a href="https://www.lullabot.com/blog/article/processing-forms-angularjs">the Lullabot Blog</a>.</p>
-  <a href="https://github.com/juampy72/angularjs_form"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub"></a>
+  <p>This form is used to submit RTF queries.</p>
 
   <div data-ng-controller="help">
     <div id="messages" class="alert alert-success" data-ng-show="messages" data-ng-bind="messages"></div>
     <div data-ng-show="progress.active()" style="color: red; font-size: 50px;">Sending&hellip;</div>
     <form name="helpForm" novalidate role="form">
       <div class="form-group">
-        <label for="name">Your Name </label>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.name.$error.required">Required!</span>
-        <input type="text" name="name" data-ng-model="name" class="form-control" required />
+        <label for="userId">User Id </label>
+        <span class="label label-danger" data-ng-show="submitted && helpForm.userId.$error.required">Required!</span>
+        <input type="text" name="userId" data-ng-model="userId" class="form-control" required />
       </div>
 
       <div class="form-group">
-        <label for="email">Your E-mail address</label>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.email.$error.required">Required!</span>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.$error.email">Invalid email!</span>
-        <input type="email" name="email" data-ng-model="email" class="form-control" required />  
+        <label for="userIdType">User Id Type</label>
+        <span class="label label-danger" data-ng-show="submitted && helpForm.userIdType.$error.required">Required!</span>
+        <input type="text" name="userIdType" data-ng-model="userIdType" class="form-control" required />
       </div>
 
       <div class="form-group">
-        <label for="subjectList">What is the nature of your request?</label>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.subjectList.$error.required">Required!</span>
-        <select name="subjectList" data-ng-model="subjectList" data-ng-options="id as value for (id, value) in subjectListOptions" class="form-control" required>
-          <option value=""></option>
+        <label for="sourceType">Source Type</label>
+        <span class="label label-danger" data-ng-show="submitted && helpForm.sourceType.$error.required">Required!</span>
+        <select name="text" data-ng-model="sourceType" data-ng-options="id as value for (id, value) in sourceTypeOptions" class="form-control" required>
+          <option value="">Please select the source type</option>
         </select>
       </div>
 
       <div class="form-group">
-        <label for="url">URL of Relevant Page</label>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.$error.url">Invalid URL format!</span>
-        <input type="url" name="url" data-ng-model="url" class="form-control" />
+        <label for="sourceName">Source Name</label>
+        <span class="label label-danger" data-ng-show="submitted && helpForm.sourceName.$error.required">Required!</span>
+        <input type="text" name="sourceName" data-ng-model="sourceName" class="form-control" required />
       </div>
 
       <div class="form-group">
-        <label for="comments">Description</label>
-        <span class="label label-danger" data-ng-show="submitted && helpForm.comments.$error.required">Required!</span>
-        <textarea name="comments" data-ng-model="comments" class="form-control" required></textarea>
+        <label for="sourceId">Source Id </label>
+        <input type="text" name="sourceId" data-ng-model="sourceId" class="form-control" />
       </div>
 
       <button data-ng-disabled="progress.active()" data-ng-click="submit(helpForm)" class="btn btn-default">Submit</button>
